--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -69,8 +69,8 @@
   <string name="version_load_fail">Αποτυχία ανάκτησης έκδοσης</string>
   <string name="installer_file_save_success">Αποθηκεύτηκε στο %s</string>
   <string name="installer_file_save_failed">Απέτυχε η αποθήκευση στο %s</string>
-  <string name="installer_success">Επιτυχής εγκατάσταση του Aliucord</string>
-  <string name="installer_aborted">Εγκατάλειψη εγκατάστασης Aliucord</string>
+  <string name="installer_install_success">Επιτυχής εγκατάσταση του Aliucord</string>
+  <string name="installer_install_aborted">Εγκατάλειψη εγκατάστασης Aliucord</string>
   <string name="installer_dl_verify_fail">Αποτυχία επαλήθευσης λήψης</string>
   <string name="installer_uninstall_new">Παρακαλώ απεγκαταστήστε την τρέχουσα έκδοση του Aliucord σας για να συνεχίσετε!</string>
   <string name="installer_minimization_warning">Since battery optimizations have not been disabled, minimizing this screen may abort the installation process!</string>
