--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -69,8 +69,8 @@
   <string name="version_load_fail">Error al recuperar la versión</string>
   <string name="installer_file_save_success">Guardado como %s</string>
   <string name="installer_file_save_failed">Error al guardar %s</string>
-  <string name="installer_success">Aliucord instalado con éxito</string>
-  <string name="installer_aborted">Se abortó la instalación de Aliucord</string>
+  <string name="installer_install_success">Aliucord instalado con éxito</string>
+  <string name="installer_install_aborted">Se abortó la instalación de Aliucord</string>
   <string name="installer_dl_verify_fail">Error al verificar la descarga</string>
   <string name="installer_uninstall_new">¡Por favor, desinstala tu versión actual de Aliucord para continuar!</string>
   <string name="installer_minimization_warning">Since battery optimizations have not been disabled, minimizing this screen may abort the installation process!</string>
