--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -69,8 +69,8 @@
   <string name="version_load_fail">Gagal untuk mendapatkan versi</string>
   <string name="installer_file_save_success">Disimpan di %s</string>
   <string name="installer_file_save_failed">Gagal untuk menyimpan %s</string>
-  <string name="installer_success">Berhasil memasang Aliucord</string>
-  <string name="installer_aborted">Pemasangan Aliucord dibatalkan</string>
+  <string name="installer_install_success">Berhasil memasang Aliucord</string>
+  <string name="installer_install_aborted">Pemasangan Aliucord dibatalkan</string>
   <string name="installer_dl_verify_fail">Failed to verify download</string>
   <string name="installer_uninstall_new">Silahkan copot versi Aliucord Anda saat ini untuk melanjutkan!</string>
   <string name="installer_minimization_warning">Since battery optimizations have not been disabled, minimizing this screen may abort the installation process!</string>
