--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -69,8 +69,8 @@
   <string name="version_load_fail">버전을 가져오지 못했어요</string>
   <string name="installer_file_save_success">%s에 저장했어요</string>
   <string name="installer_file_save_failed">%s을(를) 저장하지 못했어요</string>
-  <string name="installer_success">Aliucord 설치를 완료했어요</string>
-  <string name="installer_aborted">Aliucord 설치를 중단했어요</string>
+  <string name="installer_install_success">Aliucord 설치를 완료했어요</string>
+  <string name="installer_install_aborted">Aliucord 설치를 중단했어요</string>
   <string name="installer_dl_verify_fail">Failed to verify download</string>
   <string name="installer_uninstall_new">계속하려면 Aliucord의 현재 버전을 설치 삭제해 주세요!</string>
   <string name="installer_minimization_warning">Since battery optimizations have not been disabled, minimizing this screen may abort the installation process!</string>
