--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -69,8 +69,8 @@
   <string name="version_load_fail">Nie można pobrać wersji</string>
   <string name="installer_file_save_success">Zapisano do %s</string>
   <string name="installer_file_save_failed">Nie można zapisać %s</string>
-  <string name="installer_success">Pomyślnie zainstalowano Aliucord</string>
-  <string name="installer_aborted">Przerwano instalację Aliucord</string>
+  <string name="installer_install_success">Pomyślnie zainstalowano Aliucord</string>
+  <string name="installer_install_aborted">Przerwano instalację Aliucord</string>
   <string name="installer_dl_verify_fail">Failed to verify download</string>
   <string name="installer_uninstall_new">Odinstaluj aktualną wersję Aliucorda, aby kontynuować!</string>
   <string name="installer_minimization_warning">Since battery optimizations have not been disabled, minimizing this screen may abort the installation process!</string>
