--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -69,8 +69,8 @@
   <string name="version_load_fail">Không truy xuất được phiên bản</string>
   <string name="installer_file_save_success">Đã lưu vào %s</string>
   <string name="installer_file_save_failed">Lưu trữ thất bại %s</string>
-  <string name="installer_success">Aliucord đã được cài đặt thành công</string>
-  <string name="installer_aborted">Đã hủy bỏ cài đặt Aliucord</string>
+  <string name="installer_install_success">Aliucord đã được cài đặt thành công</string>
+  <string name="installer_install_aborted">Đã hủy bỏ cài đặt Aliucord</string>
   <string name="installer_dl_verify_fail">Failed to verify download</string>
   <string name="installer_uninstall_new">Vui lòng gỡ cài đặt phiên bản Aliucord hiện tại của bạn để tiếp tục!</string>
   <string name="installer_minimization_warning">Since battery optimizations have not been disabled, minimizing this screen may abort the installation process!</string>
