--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -69,8 +69,8 @@
   <string name="version_load_fail">獲得版本失敗</string>
   <string name="installer_file_save_success">儲存到 %s</string>
   <string name="installer_file_save_failed">儲存到 %s 失敗</string>
-  <string name="installer_success">成功地安裝 Aliucord</string>
-  <string name="installer_aborted">中斷 Aliucord 安裝</string>
+  <string name="installer_install_success">成功地安裝 Aliucord</string>
+  <string name="installer_install_aborted">中斷 Aliucord 安裝</string>
   <string name="installer_dl_verify_fail">Failed to verify download</string>
   <string name="installer_uninstall_new">請解除安裝目前版本的 Aliucord 以繼續！</string>
   <string name="installer_minimization_warning">Since battery optimizations have not been disabled, minimizing this screen may abort the installation process!</string>
