feat: implement smali patching
Apply the smali patch bundles while patching the APK

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,11 +109,13 @@
   <string name="patch_step_dl_kotlin">Downloading Kotlin Stdlib</string>
   <string name="patch_step_dl_injector">Downloading Aliucord Injector</string>
   <string name="patch_step_dl_aliuhook">Downloading Aliuhook library</string>
+  <string name="patch_step_dl_smali">Downloading smali patches</string>
   <string name="patch_step_copy_deps">Copying dependencies</string>
   <string name="patch_step_patch_manifests">Patching apk manifests</string>
   <string name="patch_step_patch_icon">Patching app icon</string>
   <string name="patch_step_add_injector">Adding Aliucord injector</string>
   <string name="patch_step_add_aliuhook">Adding Aliuhook library</string>
+  <string name="patch_step_patch_smali">Applying smali patches</string>
   <string name="patch_step_reorganize_dex">Adding .dex files to APK</string>
   <string name="patch_step_save_metadata">Store metadata</string>
   <string name="patch_step_alignment">Aligning APKs</string>
