--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   <string name="action_dismiss">Dismiss</string>
   <string name="action_install">Install</string>
   <string name="action_uninstall">Uninstall</string>
-  <string name="action_add_install">Add Installation</string>
+  <string name="action_add_install">New Aliucord Installation</string>
   <string name="action_update">Update</string>
   <string name="action_clear">Clear</string>
   <string name="action_launch">Launch</string>
