--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,16 +112,16 @@
   <string name="patch_step_dl_aliuhook">Downloading Aliuhook library</string>
   <string name="patch_step_dl_smali">Downloading smali patches</string>
   <string name="patch_step_copy_deps">Copying dependencies</string>
-  <string name="patch_step_patch_manifests">Patching apk manifests</string>
+  <string name="patch_step_patch_manifests">Patching APK manifest</string>
   <string name="patch_step_patch_icon">Patching app icon</string>
   <string name="patch_step_add_injector">Adding Aliucord injector</string>
   <string name="patch_step_add_aliuhook">Adding Aliuhook library</string>
   <string name="patch_step_patch_smali">Applying smali patches</string>
   <string name="patch_step_reorganize_dex">Adding .dex files to APK</string>
   <string name="patch_step_save_metadata">Store metadata</string>
-  <string name="patch_step_alignment">Aligning APKs</string>
-  <string name="patch_step_signing">Signing APKs</string>
-  <string name="patch_step_install">Installing APKs</string>
+  <string name="patch_step_alignment">Aligning APK</string>
+  <string name="patch_step_signing">Signing APK</string>
+  <string name="patch_step_install">Installing APK</string>
   <string name="patch_step_cleanup">Cleaning up</string>
 
   <string name="status_queued">Queued</string>
