--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,12 +41,14 @@
   <string name="settings_advanced">Advanced</string>
   <string name="settings_appearance">Appearance</string>
   <string name="settings_developer_options">Developer options</string>
+  <string name="settings_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
   <string name="setting_clear_cache">Clear cache</string>
   <string name="setting_dynamic_color">Dynamic color</string>
+  <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
-  <string name="setting_keep_patched_apks_desc">Don\'t delete patched APKs after installing (for installing manually)</string>
+  <string name="setting_keep_patched_apks_desc">Keep all patched files and APKs after installing for debugging.</string>
   <string name="setting_alt_downloader">Alternative downloader</string>
-  <string name="setting_alt_downloader_desc">Use a custom HTTP client instead of the system DownloadManager. May fix errors on some devices</string>
+  <string name="setting_alt_downloader_desc">Use a custom HTTP client instead of the system DownloadManager. May fix download errors on specific devices.</string>
 
   <string name="theme_system">System</string>
   <string name="theme_dark">Dark</string>
