feat: request permissions to install from unknown sources before patching

--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -30,7 +30,7 @@
   <string name="action_open_info">Åbn info</string>
   <string name="action_reset_default">Nulstil til standard</string>
   <string name="permissions_grant_title">Giv Tilladelser</string>
-  <string name="permissions_grant_body">In order for Aliucord Manager to work properly, you need to grant file permissions. Since shared data in stored in ~/Aliucord, permissions are required in order for manager to function.</string>
+  <string name="storage_permissions_grant_body">In order for Aliucord Manager to work properly, you need to grant file permissions. Since shared data in stored in ~/Aliucord, permissions are required in order for manager to function.</string>
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Aliucord kunne ikke startes</string>
   <string name="settings_theme">Tema</string>
