--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -30,7 +30,7 @@
   <string name="action_open_info">Open info</string>
   <string name="action_reset_default">Reset to default</string>
   <string name="permissions_grant_title">Toestemmingen verlenen</string>
-  <string name="permissions_grant_body">Om Aliucord Manager te laten functioneren, zijn bestandsrechten vereist. Omdat gedeelde gegevens zijn opgeslagen in ~/Aliucord, zijn machtigingen vereist voor toegang.</string>
+  <string name="storage_permissions_grant_body">Om Aliucord Manager te laten functioneren, zijn bestandsrechten vereist. Omdat gedeelde gegevens zijn opgeslagen in ~/Aliucord, zijn machtigingen vereist voor toegang.</string>
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Kon Aliucord niet opstarten</string>
   <string name="settings_theme">Thema</string>
