--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,8 +69,9 @@
   <string name="navigation_about">About</string>
   <string name="navigation_settings">Settings</string>
 
+  <string name="contributors_lead">Lead</string>
   <string name="contributors">Contributors</string>
-  <string name="contributors_contributions">%o contributions</string>
+  <string name="contributors_contributions">%s contributions</string>
 
   <string name="network_load_fail">Failed to load</string>
   <string name="network_warning_title">Metered network</string>
