--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,9 +60,9 @@
   <string name="theme_light">Light</string>
 
   <string name="plugins_title">Plugins</string>
-  <string name="plugins_view_changelog">View changelog for %1$s</string>
+  <string name="plugins_view_changelog">View changelog</string>
+  <string name="plugins_delete_plugin">Uninstall %s</string>
   <string name="plugins_delete_plugin_body">Are you sure you want to uninstall this plugin?</string>
-  <string name="plugins_search">Search Plugins</string>
   <string name="plugins_none_installed">No plugins installed!</string>
   <string name="plugins_changelog_media">Changelog Media</string>
   <string name="plugins_plugin_title">§plugin§%1$s§ v%2$s</string>
