--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,6 +151,8 @@
   <string name="downloader_err_file_exists">Download failed (File exists)</string>
   <string name="downloader_err_storage_space">Download failed (Insufficient space)</string>
 
+  <string name="home_network_fail">Failed to fetch data!</string>
+
   <string name="patchopts_title">Aliucord provides several customizations at installation time that are not able to be changed once installed.</string>
   <string name="patchopts_pkgname_title">Package Name</string>
   <string name="patchopts_pkgname_desc">The package name is a unique identifier for all apps. Using different ones can allow for multiple installations of Aliucord.</string>
